# extrico

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt  Editor.qml  app.qml  main.cpp
src/extrico/: CMakeLists.txt
src/extrico/include/extrico/: bits_view.hpp  layout.hpp  lexer.hpp  meta.hpp  parse.hpp  parser.hpp  scanner.hpp  token.hpp
src/extrico/src/: bits_view.cpp  layout.cpp  lexer.cpp  parse.cpp  parser.cpp  scanner.cpp  token.cpp
tests/: CMakeLists.txt  bits_view.cpp  layout.cpp  parser.cpp  tests.cpp
